# ai_agent

./: README.md  agent_config.py  langchain_main.py  main.py  mytools.py  pyproject.toml  stock_data.json
data/: portfolio_state.json
stock/: __init__.py  agent_config.py  gradio_ui.py  langchain_main.py  stock_tools.py
